NEW: Lane Clock Controls work

--- a/frontend/coachcalculator.html
+++ b/frontend/coachcalculator.html
@@ -198,7 +198,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: space-evenly;
+        justify-content: flex-start;
       }
 
       .control_lane {
@@ -279,6 +279,10 @@
       .next_up_display {
         width: 93%;
         font-size: 30px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        font-weight: 600;
       }
 
       .lane_split_panel {
@@ -1654,24 +1658,36 @@
         new_time.setMilliseconds(0);
 
         let diff = new_time.getTime() - running_time.getTime();
-        sendSyncClocksCommand(diff);
+
         const lanes = Object.keys(LANES);
         lanes.forEach((lane) => {
-          const lane_clock = LANES[lane].lane_clock;
-          if (lane_clock.additional_time_delta == additional_time_delta)
-            lane_clock.additional_time_delta = diff;
+          if (LANES[lane].hasOwnProperty("is_same_as_main")) {
+            if (LANES[lane].is_same_as_main) {
+              const lane_clock = LANES[lane].lane_clock;
+              if (lane_clock.additional_time_delta == additional_time_delta)
+                lane_clock.additional_time_delta = diff;
+            }
+          }
         });
         additional_time_delta = diff;
+        sendSyncClocksCommand();
       }
 
-      function sendSyncClocksCommand(diff) {
-        let data = {
-          action: "syncClocks",
-          additional_time_delta: diff,
-          roomKey: roomKey,
-        };
+      function sendSyncClocksCommand() {
+        const lane_keys = Object.keys(LANES);
+        lane_keys.forEach((lane_key) => {
+          sendSyncClocksCommandForLane(
+            lane_key,
+            LANES[lane_key].lane_clock.additional_time_delta
+          );
+        });
+        // let data = {
+        //   action: "syncClocks",
+        //   additional_time_delta: diff,
+        //   roomKey: roomKey,
+        // };
 
-        socket.send(JSON.stringify(data));
+        // socket.send(JSON.stringify(data));
       }
 
       function addOneMinute() {
@@ -1699,6 +1715,12 @@
       }
 
       function syncClocks() {
+        const lane_keys = Object.keys(LANES);
+        lane_keys.forEach((lane_key) => {
+          LANES[lane_key].lane_clock.additional_time_delta =
+            additional_time_delta;
+          LANES[lane_key].is_same_as_main = true;
+        });
         sendSyncClocksCommand(additional_time_delta);
       }
 
@@ -1856,6 +1878,10 @@
           edit_lane_control_button.classList.add("btn");
           edit_lane_control_button.classList.add("btn-success");
           edit_lane_control_button.innerText = "Clock Controls";
+          edit_lane_control_button.addEventListener(
+            "click",
+            laneClockControlsClicked
+          );
           lane_clock_controls_div.appendChild(edit_lane_control_button);
 
           const start_controls_div = document.createElement("div");
@@ -1869,6 +1895,7 @@
           start_on_top_button.classList.add("btn");
           start_on_top_button.classList.add("btn-success");
           start_on_top_button.innerText = "Start on :00";
+          start_on_top_button.addEventListener("click", laneStartOnTopClicked);
           start_controls_div.appendChild(start_on_top_button);
 
           const start_on_thirty_button = document.createElement("button");
@@ -1876,6 +1903,10 @@
           start_on_thirty_button.classList.add("btn");
           start_on_thirty_button.classList.add("btn-success");
           start_on_thirty_button.innerText = "Start on :30";
+          start_on_thirty_button.addEventListener(
+            "click",
+            laneStartOnTopClicked
+          );
           start_controls_div.appendChild(start_on_thirty_button);
 
           const lane_controls_subtract_time_div = document.createElement("div");
@@ -1890,6 +1921,7 @@
           subtract_min_button.classList.add("btn");
           subtract_min_button.classList.add("btn-primary");
           subtract_min_button.innerText = "-1:00";
+          subtract_min_button.addEventListener("click", subtractOneMinute);
           lane_controls_subtract_time_div.appendChild(subtract_min_button);
 
           const subtract_ten_button = document.createElement("button");
@@ -1897,6 +1929,10 @@
           subtract_ten_button.classList.add("btn");
           subtract_ten_button.classList.add("btn-primary");
           subtract_ten_button.innerText = "-:10";
+          subtract_ten_button.addEventListener(
+            "click",
+            subtractTenSecondsToLaneClicked
+          );
           lane_controls_subtract_time_div.appendChild(subtract_ten_button);
 
           const subtract_one_button = document.createElement("button");
@@ -1904,6 +1940,10 @@
           subtract_one_button.classList.add("btn");
           subtract_one_button.classList.add("btn-primary");
           subtract_one_button.innerText = "-:01";
+          subtract_one_button.addEventListener(
+            "click",
+            subtractOneSecondsToLaneClicked
+          );
           lane_controls_subtract_time_div.appendChild(subtract_one_button);
 
           const lane_controls_tare_div = document.createElement("div");
@@ -1917,6 +1957,7 @@
           tare_button.classList.add("btn");
           tare_button.classList.add("btn-primary");
           tare_button.innerText = "set to :00";
+          tare_button.addEventListener("click", setLaneToZeroClicked);
           lane_controls_tare_div.appendChild(tare_button);
 
           const lane_controls_addtime_div = document.createElement("div");
@@ -1931,6 +1972,7 @@
           add_min_button.classList.add("btn");
           add_min_button.classList.add("btn-primary");
           add_min_button.innerText = "+1:00";
+          add_min_button.addEventListener("click", addOneMinuteToLaneClicked);
           lane_controls_addtime_div.appendChild(add_min_button);
 
           const add_ten_button = document.createElement("button");
@@ -1938,6 +1980,7 @@
           add_ten_button.classList.add("btn");
           add_ten_button.classList.add("btn-primary");
           add_ten_button.innerText = "+:10";
+          add_ten_button.addEventListener("click", addTenSecondsToLaneClicked);
           lane_controls_addtime_div.appendChild(add_ten_button);
 
           const add_one_button = document.createElement("button");
@@ -1945,6 +1988,7 @@
           add_one_button.classList.add("btn");
           add_one_button.classList.add("btn-primary");
           add_one_button.innerText = "+:01";
+          add_one_button.addEventListener("click", addOneSecondsToLaneClicked);
           lane_controls_addtime_div.appendChild(add_one_button);
         };
         const addDisplays = () => {
@@ -4081,6 +4125,204 @@
       function rollOverNumber(number) {
         if (number >= 3600) return number - 3600;
         return number;
+      }
+
+      function laneClockControlsClicked(e) {
+        if (this.innerText == "Clock Controls") {
+          this.parentElement.parentElement.children[4].style.display = "";
+          this.parentElement.parentElement.children[5].style.display = "";
+          this.parentElement.parentElement.children[6].style.display = "";
+          this.parentElement.parentElement.children[7].style.display = "";
+          this.innerText = "Hide Clock Controls";
+          this.classList.remove("btn-success");
+          this.classList.add("btn-primary");
+        } else {
+          this.parentElement.parentElement.children[4].style.display = "none";
+          this.parentElement.parentElement.children[5].style.display = "none";
+          this.parentElement.parentElement.children[6].style.display = "none";
+          this.parentElement.parentElement.children[7].style.display = "none";
+          this.innerText = "Clock Controls";
+          this.classList.remove("btn-primary");
+          this.classList.add("btn-success");
+        }
+      }
+
+      function laneStartOnTopClicked(e) {
+        let lane_key =
+          this.parentElement.parentElement.children[0].innerText.replace(
+            "Lane ",
+            ""
+          );
+        let lane = LANES[lane_key];
+
+        let clock_display = lane.lane_panel.children[1].innerText;
+        clock_display = clock_display.split(":");
+        let start_time = 0;
+        if (this.innerText == "Start on :00")
+          start_time = (parseInt(clock_display[0]) + 1) * 60;
+        else {
+          start_time = parseInt(clock_display[0]) * 60 + 30;
+          let current_clock_time =
+            parseInt(clock_display[0]) * 60 + parseInt(clock_display[1]);
+          if (start_time < current_clock_time) start_time += 60;
+        }
+
+        start_time = rollOverNumber(start_time);
+
+        lane.sendoff_list.start_time = start_time;
+        lane.sendoff_list.running_time += start_time;
+
+        for (let j = 0; j < lane.sendoff_list.list.length; j++) {
+          if (lane.sendoff_list.list[j].hasOwnProperty("original_time")) {
+            lane.sendoff_list.list[j].time =
+              lane.sendoff_list.list[j].original_time + start_time;
+          } else {
+            lane.sendoff_list.list[j].original_time =
+              lane.sendoff_list.list[j].time;
+            lane.sendoff_list.list[j].time += start_time;
+          }
+          if (i == 79) {
+            debugger;
+          }
+        }
+
+        rollOverSendoffLists();
+        sendSendoffLists(false);
+        assignSendoffLists();
+        assignDisplayFromNextInTable(lane_key);
+      }
+
+      function addOneMinuteToLaneClicked(e) {
+        let lane_key =
+          this.parentElement.parentElement.children[0].innerText.replace(
+            "Lane ",
+            ""
+          );
+        let lane = LANES[lane_key];
+        lane.lane_clock.additional_time_delta += 60000;
+        lane.is_same_as_main = false;
+        sendSyncClocksCommandForLane(
+          lane_key,
+          lane.lane_clock.additional_time_delta
+        );
+      }
+
+      function addTenSecondsToLaneClicked(e) {
+        let lane_key =
+          this.parentElement.parentElement.children[0].innerText.replace(
+            "Lane ",
+            ""
+          );
+        let lane = LANES[lane_key];
+        lane.lane_clock.additional_time_delta += 10000;
+        lane.is_same_as_main = false;
+        sendSyncClocksCommandForLane(
+          lane_key,
+          lane.lane_clock.additional_time_delta
+        );
+      }
+
+      function addOneSecondsToLaneClicked(e) {
+        let lane_key =
+          this.parentElement.parentElement.children[0].innerText.replace(
+            "Lane ",
+            ""
+          );
+        let lane = LANES[lane_key];
+        lane.lane_clock.additional_time_delta += 1000;
+        lane.is_same_as_main = false;
+        sendSyncClocksCommandForLane(
+          lane_key,
+          lane.lane_clock.additional_time_delta
+        );
+      }
+
+      function subtractOneMinuteToLaneClicked(e) {
+        let lane_key =
+          this.parentElement.parentElement.children[0].innerText.replace(
+            "Lane ",
+            ""
+          );
+        let lane = LANES[lane_key];
+        lane.lane_clock.additional_time_delta -= 60000;
+        lane.is_same_as_main = false;
+        sendSyncClocksCommandForLane(
+          lane_key,
+          lane.lane_clock.additional_time_delta
+        );
+      }
+
+      function subtractTenSecondsToLaneClicked(e) {
+        let lane_key =
+          this.parentElement.parentElement.children[0].innerText.replace(
+            "Lane ",
+            ""
+          );
+        let lane = LANES[lane_key];
+        lane.lane_clock.additional_time_delta -= 10000;
+        lane.is_same_as_main = false;
+        sendSyncClocksCommandForLane(
+          lane_key,
+          lane.lane_clock.additional_time_delta
+        );
+      }
+
+      function subtractOneSecondsToLaneClicked(e) {
+        let lane_key =
+          this.parentElement.parentElement.children[0].innerText.replace(
+            "Lane ",
+            ""
+          );
+        let lane = LANES[lane_key];
+        lane.lane_clock.additional_time_delta -= 1000;
+        lane.is_same_as_main = false;
+        sendSyncClocksCommandForLane(
+          lane_key,
+          lane.lane_clock.additional_time_delta
+        );
+      }
+
+      function sendSyncClocksCommandForLane(lane_key, new_time_delta) {
+        let data = {
+          action: "syncClockForLane",
+          additional_time_delta: new_time_delta,
+          roomKey: roomKey,
+          lane_key: lane_key,
+        };
+
+        socket.send(JSON.stringify(data));
+      }
+
+      function setLaneToZeroClicked(e) {
+        let temp = Date.now();
+
+        let lane_key =
+          this.parentElement.parentElement.children[0].innerText.replace(
+            "Lane ",
+            ""
+          );
+
+        let split_clock_text =
+          this.parentElement.parentElement.children[1].innerText.split(":");
+        let minutes = parseInt(split_clock_text[0]);
+        // let seconds = parseInt(split_clock_text[1]);
+
+        let running_time = new Date(
+          temp + LANES[lane_key].lane_clock.time_delta
+        );
+        let new_time = new Date(running_time);
+        new_time.setMinutes(minutes);
+        new_time.setSeconds(0);
+        new_time.setMilliseconds(0);
+
+        let diff = new_time.getTime() - running_time.getTime();
+
+        LANES[lane_key].lane_clock.additional_time_delta = diff;
+
+        sendSyncClocksCommandForLane(
+          lane_key,
+          LANES[lane_key].lane_clock.additional_time_delta
+        );
       }
     </script>
   </body>
