NEW: All buttons working

--- a/frontend/coachcalculator.html
+++ b/frontend/coachcalculator.html
@@ -671,6 +671,12 @@
         display: flex;
         flex-direction: column;
       }
+      #pick_set_button_display {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100%;
+      }
     </style>
     <script src="https://www.youtube.co/iframe_api"></script>
   </head>
@@ -1082,20 +1088,24 @@
             switch_mode_button.classList.add("btn-success");
             switch_mode_button.classList.add("nearly_full_width");
             switch_mode_button.classList.add("control_button");
-            switch_mode_button.innerText = "Enable Lane Time Edit Mode";
+            switch_mode_button.innerText = "Switch Lane Time Edit Mode";
+            switch_mode_button.addEventListener(
+              "click",
+              switchModeButtonClicked
+            );
             switch_mode_button.disabled = true;
             sendoff_controls_panel.appendChild(switch_mode_button);
 
-            const pause_all_lanes_button = document.createElement("button");
-            pause_all_lanes_button.id = "pause_all_lanes_button";
-            pause_all_lanes_button.type = "button";
-            pause_all_lanes_button.classList.add("btn");
-            pause_all_lanes_button.classList.add("btn-warning");
-            pause_all_lanes_button.classList.add("nearly_full_width");
-            pause_all_lanes_button.classList.add("control_button");
-            pause_all_lanes_button.innerText = "Pause All Lanes";
-            pause_all_lanes_button.disabled = true;
-            sendoff_controls_panel.appendChild(pause_all_lanes_button);
+            // const pause_all_lanes_button = document.createElement("button");
+            // pause_all_lanes_button.id = "pause_all_lanes_button";
+            // pause_all_lanes_button.type = "button";
+            // pause_all_lanes_button.classList.add("btn");
+            // pause_all_lanes_button.classList.add("btn-warning");
+            // pause_all_lanes_button.classList.add("nearly_full_width");
+            // pause_all_lanes_button.classList.add("control_button");
+            // pause_all_lanes_button.innerText = "Pause All Lanes";
+            // pause_all_lanes_button.disabled = true;
+            // sendoff_controls_panel.appendChild(pause_all_lanes_button);
 
             const stop_all_lanes_button = document.createElement("button");
             stop_all_lanes_button.id = "stop_all_lanes_button";
@@ -1105,6 +1115,10 @@
             stop_all_lanes_button.classList.add("nearly_full_width");
             stop_all_lanes_button.classList.add("control_button");
             stop_all_lanes_button.innerText = "Stop All Lanes";
+            stop_all_lanes_button.addEventListener(
+              "click",
+              stopAllLanesClicked
+            );
             stop_all_lanes_button.disabled = true;
             sendoff_controls_panel.appendChild(stop_all_lanes_button);
 
@@ -1160,19 +1174,6 @@
             lanes_display = document.createElement("div");
             lanes_display.id = "lanes_display";
             lower_div.appendChild(lanes_display);
-
-            const send_info_button = document.createElement("button");
-            send_info_button.id = "send_info_button";
-            send_info_button.innerText = "Send Info...";
-            send_info_button.addEventListener("click", sendInfo);
-
-            const split_button = document.createElement("button");
-            split_button.id = "split_button";
-            split_button.innerText = "Split";
-            split_button.addEventListener("click", Split);
-
-            lanes_display.appendChild(send_info_button);
-            lanes_display.appendChild(split_button);
           };
           const add_initial_empty_splits_display = () => {
             const lower_div = document.getElementById("lower_div");
@@ -1356,7 +1357,7 @@
         lanes.sort((a, b) => parseInt(a) - parseInt(b));
 
         lanes.forEach((lane_number) => {
-          if (LANES[lane_number].connected) {
+          if (LANES[lane_number].connected && LANES[lane_number].run_clock) {
             const lane_panel = LANES[lane_number].lane_panel;
             const split_panel = LANES[lane_number].split_panel;
 
@@ -1521,6 +1522,7 @@
         let lane = parseInt(laneNumber);
         LANES[lane] = {
           connected: true,
+          run_clock: true,
           lane_clock: new LaneClock(time_delta, additional_time_delta),
         };
         UpdateLaneConnections();
@@ -1724,27 +1726,6 @@
         sendSyncClocksCommand(additional_time_delta);
       }
 
-      function sendInfo() {
-        data = {
-          action: "sendMessage",
-          roomKey: roomKey,
-          message: {
-            1: [
-              { name: "Swimmer 1", time: "00:30", description: "100 FR" },
-              { name: "", time: "00:35", description: "100 FR" },
-              { name: "", time: "00:40", description: "100 FR" },
-              { name: "", time: "00:45", description: "100 FR" },
-              { name: "", time: "01:00", description: "100 FR" },
-              { name: "", time: "01:05", description: "100 FR" },
-              { name: "", time: "01:10", description: "100 FR" },
-              { name: "", time: "01:15", description: "100 FR" },
-            ],
-          },
-        };
-
-        socket.send(JSON.stringify(data));
-      }
-
       function truncateToHundreth(n) {
         n = n.toString();
         switch (n.length) {
@@ -1840,23 +1821,26 @@
           lane_controls_major_div.id =
             "lane" + lane_number + "_controls_major_lane" + lane_number;
           lane_controls_major_div.classList.add("lane_controls");
+          lane_controls_major_div.style.display = "none";
           lane_div.appendChild(lane_controls_major_div);
 
-          const pause_button = document.createElement("button");
-          pause_button.type = "button";
-          pause_button.id = "lane" + lane_number + "_pause_button";
-          pause_button.classList.add("btn");
-          pause_button.classList.add("btn-warning");
-          pause_button.innerHTML = `<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" fill="#000000" height="35" width="35" version="1.1" id="Capa_1" viewBox="0 0 512 512" xml:space="preserve">
-                  <path d="M256,0C114.617,0,0,114.615,0,256s114.617,256,256,256s256-114.615,256-256S397.383,0,256,0z M224,320  c0,8.836-7.164,16-16,16h-32c-8.836,0-16-7.164-16-16V192c0-8.836,7.164-16,16-16h32c8.836,0,16,7.164,16,16V320z M352,320  c0,8.836-7.164,16-16,16h-32c-8.836,0-16-7.164-16-16V192c0-8.836,7.164-16,16-16h32c8.836,0,16,7.164,16,16V320z"></path>
-                </svg>`;
-          lane_controls_major_div.appendChild(pause_button);
+          // const pause_button = document.createElement("button");
+          // pause_button.type = "button";
+          // pause_button.id = "lane" + lane_number + "_pause_button";
+          // pause_button.classList.add("btn");
+          // pause_button.classList.add("btn-warning");
+          // pause_button.innerHTML = `<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" fill="#000000" height="35" width="35" version="1.1" id="Capa_1" viewBox="0 0 512 512" xml:space="preserve">
+          //         <path d="M256,0C114.617,0,0,114.615,0,256s114.617,256,256,256s256-114.615,256-256S397.383,0,256,0z M224,320  c0,8.836-7.164,16-16,16h-32c-8.836,0-16-7.164-16-16V192c0-8.836,7.164-16,16-16h32c8.836,0,16,7.164,16,16V320z M352,320  c0,8.836-7.164,16-16,16h-32c-8.836,0-16-7.164-16-16V192c0-8.836,7.164-16,16-16h32c8.836,0,16,7.164,16,16V320z"></path>
+          //       </svg>`;
+          // lane_controls_major_div.appendChild(pause_button);
 
           const stop_button = document.createElement("button");
           stop_button.type = "button";
           stop_button.id = "lane" + lane_number + "_stop_button";
           stop_button.classList.add("btn");
           stop_button.classList.add("btn-danger");
+          stop_button.run_clock = true;
+          stop_button.addEventListener("click", stopLaneClockClicked);
           stop_button.innerHTML = `<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" height="35" width="35" version="1.1" id="Capa_1" viewBox="0 0 30.05 30.05" xml:space="preserve">
                   <g>
                     <path style="fill: #030104" d="M18.993,10.688h-7.936c-0.19,0-0.346,0.149-0.346,0.342v8.022c0,0.189,0.155,0.344,0.346,0.344   h7.936c0.19,0,0.344-0.154,0.344-0.344V11.03C19.336,10.838,19.183,10.688,18.993,10.688z"></path>
@@ -1864,13 +1848,6 @@
                   </g>
                 </svg>`;
           lane_controls_major_div.appendChild(stop_button);
-        };
-        const addLaneClockControls = () => {
-          const lane_clock_controls_div = document.createElement("div");
-          lane_clock_controls_div.id =
-            "lane" + lane_number + "_lane_clock_controls_div";
-          lane_clock_controls_div.classList.add("lane_clock_controls");
-          lane_div.appendChild(lane_clock_controls_div);
 
           const edit_lane_control_button = document.createElement("button");
           edit_lane_control_button.id =
@@ -1882,7 +1859,26 @@
             "click",
             laneClockControlsClicked
           );
-          lane_clock_controls_div.appendChild(edit_lane_control_button);
+          lane_controls_major_div.appendChild(edit_lane_control_button);
+        };
+        const addLaneClockControls = () => {
+          const lane_clock_controls_div = document.createElement("div");
+          lane_clock_controls_div.id =
+            "lane" + lane_number + "_lane_clock_controls_div";
+          lane_clock_controls_div.classList.add("lane_clock_controls");
+          lane_div.appendChild(lane_clock_controls_div);
+
+          // const edit_lane_control_button = document.createElement("button");
+          // edit_lane_control_button.id =
+          //   "lane" + lane_number + "_edit_lane_control_button";
+          // edit_lane_control_button.classList.add("btn");
+          // edit_lane_control_button.classList.add("btn-success");
+          // edit_lane_control_button.innerText = "Clock Controls";
+          // edit_lane_control_button.addEventListener(
+          //   "click",
+          //   laneClockControlsClicked
+          // );
+          // lane_clock_controls_div.appendChild(edit_lane_control_button);
 
           const start_controls_div = document.createElement("div");
           start_controls_div.id = "lane" + lane_number + "_start_controls";
@@ -1921,7 +1917,10 @@
           subtract_min_button.classList.add("btn");
           subtract_min_button.classList.add("btn-primary");
           subtract_min_button.innerText = "-1:00";
-          subtract_min_button.addEventListener("click", subtractOneMinute);
+          subtract_min_button.addEventListener(
+            "click",
+            subtractOneMinuteToLaneClicked
+          );
           lane_controls_subtract_time_div.appendChild(subtract_min_button);
 
           const subtract_ten_button = document.createElement("button");
@@ -2779,6 +2778,18 @@
         const practices_div = document.createElement("div");
         practices_div.id = "practices_div";
         practices_display.appendChild(practices_div);
+
+        const pick_set_button_display = document.createElement("div");
+        pick_set_button_display.id = "pick_set_button_display";
+        practices_display.appendChild(pick_set_button_display);
+
+        const cancel_button = document.createElement("div");
+        cancel_button.type = "button";
+        cancel_button.classList.add("btn");
+        cancel_button.classList.add("btn-primary");
+        cancel_button.innerText = "Cancel";
+        cancel_button.addEventListener("click", cancelPickSetClicked);
+        pick_set_button_display.appendChild(cancel_button);
 
         const individual_practice = document.createElement("div");
         individual_practice.id = "individual_practice";
@@ -3849,10 +3860,17 @@
         pick_set_display.remove();
         document.getElementById("start_on_top_button").disabled = false;
         document.getElementById("start_on_thirty_button").disabled = false;
+        document.getElementById("switch_mode_button").disabled = false;
+        document.getElementById("stop_all_lanes_button").disabled = false;
       }
 
       function cancelAssignLanesClicked() {
         assign_lanes_popup.remove();
+        //pick_set_display.remove();
+      }
+
+      function cancelPickSetClicked() {
+        //assign_lanes_popup.remove();
         pick_set_display.remove();
       }
 
@@ -4323,6 +4341,70 @@
           lane_key,
           LANES[lane_key].lane_clock.additional_time_delta
         );
+      }
+
+      function stopLaneClockClicked(e) {
+        let lane_key =
+          this.parentElement.parentElement.children[0].innerText.replace(
+            "Lane ",
+            ""
+          );
+
+        if (this.run_clock) {
+          LANES[lane_key].run_clock = false;
+          this.run_clock = false;
+          this.classList.remove("btn-danger");
+          this.classList.add("btn-success");
+          this.innerHTML = `<svg height="35" width="35" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+
+<g id="SVGRepo_bgCarrier" stroke-width="0"/>
+
+<g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"/>
+
+<g id="SVGRepo_iconCarrier"> <path d="M21.4086 9.35258C23.5305 10.5065 23.5305 13.4935 21.4086 14.6474L8.59662 21.6145C6.53435 22.736 4 21.2763 4 18.9671L4 5.0329C4 2.72368 6.53435 1.26402 8.59661 2.38548L21.4086 9.35258Z" fill="#1C274C"/> </g>
+
+</svg>`;
+        } else {
+          LANES[lane_key].run_clock = true;
+          this.run_clock = true;
+          this.classList.remove("btn-success");
+          this.classList.add("btn-danger");
+          this.innerHTML = `<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" height="35" width="35" version="1.1" id="Capa_1" viewBox="0 0 30.05 30.05" xml:space="preserve">
+                  <g>
+                    <path style="fill: #030104" d="M18.993,10.688h-7.936c-0.19,0-0.346,0.149-0.346,0.342v8.022c0,0.189,0.155,0.344,0.346,0.344   h7.936c0.19,0,0.344-0.154,0.344-0.344V11.03C19.336,10.838,19.183,10.688,18.993,10.688z"></path>
+                    <path style="fill: #030104" d="M15.026,0C6.729,0,0.001,6.726,0.001,15.025S6.729,30.05,15.026,30.05   c8.298,0,15.023-6.726,15.023-15.025S23.324,0,15.026,0z M15.026,27.54c-6.912,0-12.516-5.604-12.516-12.515   c0-6.914,5.604-12.517,12.516-12.517c6.913,0,12.514,5.603,12.514,12.517C27.54,21.936,21.939,27.54,15.026,27.54z"></path>
+                  </g>
+                </svg>`;
+        }
+      }
+
+      function switchModeButtonClicked(e) {
+        const lanes_keys = Object.keys(LANES);
+        lanes_keys.forEach((lane) => {
+          const lane_panel = LANES[lane].lane_panel;
+          if (lane_panel.children[2].style.display == "none")
+            lane_panel.children[2].style.display = "";
+          else lane_panel.children[2].style.display = "none";
+        });
+      }
+
+      function stopAllLanesClicked(e) {
+        if (this.innerText == "Stop All Lanes") {
+          this.innerText = "Start All Lanes";
+          this.classList.remove("btn-danger");
+          this.classList.add("btn-success");
+        } else {
+          this.innerText = "Stop All Lanes";
+          this.classList.remove("btn-success");
+          this.classList.add("btn-danger");
+        }
+        const lanes_keys = Object.keys(LANES);
+        lanes_keys.forEach((lane_key) => {
+          const lane_panel = LANES[lane_key].lane_panel;
+          if (lane_panel.children[2].style.display == "none")
+            lane_panel.children[2].style.display = "";
+          lane_panel.children[2].children[0].click();
+        });
       }
     </script>
   </body>
